--- a/index.html
+++ b/index.html
@@ -63,24 +63,24 @@
                         </li>
                     </ul>
                 </div>
-                <div>
+                <!-- <div>
                     <h3>other interests atm...</h3>
                     <ul>
-                        <!-- <li>
+                        <li>
                             <p class="currently-item">using Vision Transformers to summarize and understand my bike
                                 rides <a href="https://arxiv.org/pdf/2010.11929.pdf">[1]</a> <a
                                     href="https://github.com/google-research/vision_transformer">[2]</a></p>
-                        </li> -->
+                        </li>
                         <li>
                             <p class="currently-item">discouraging bad driving behavior through tech</p>
                         </li>
-                        <!-- <li>
+                        <li>
                             <p class="currently-item">letting LLM's and CNN's <span>understand</span> traffic incidents
                             </p>
-                        </li> -->
+                        </li>
 
                     </ul>
-                </div>
+                </div> -->
                 <div>
                     <h3>previously...</h3>
                     <ul>
