--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
         <div class="two-col">
             <div id="left-col-intro">
                 <h1>James Buzaid</h1>
-                <p class="intro-text">Passionate software engineer and transit
-                    enthusiast dedicated to improving our nation's cities
-                    infrastructure, protecting pedestrians and cyclists,
-                    and more.</p>
+                <p class="intro-text">Software Engineer. Transit and climate tech enthusiast. Building sustainable,
+                    engaged, and safer cities.</p>
                 <div id="socials">
                     <p class="social-link"><a href="https://twitter.com/jbuzzy00">Twitter</a></p>
                     <p class="social-link"><a href="https://github.com/buzaidj">GitHub</a></p>
