--- a/index.html
+++ b/index.html
@@ -42,19 +42,12 @@
                     <h2>currently...</h2>
                     <ul>
                         <li>
-                            <p class="currently-item"><span class="bold">Software engineer @ Airtable</span> -
-                                developing
-                                a reliable product and a solid observability stack</p>
+                            <p class="currently-item"><span class="bold">Software engineer @ Airtable</span> —
+                                first observability, now product</p>
                         </li>
                         <li>
-                            <div class="two-col-no-wrap">
-                                <p class="currently-item"><span class="bold">Building @ <a
-                                            href="https://bananasplit.app">Banana Split</a></span> - receipt splitting
-                                    app
-                                    built as
-                                    a project with friends</p>
-                                <!-- <img src="bsplitlogo.png" width="30px" height="30px" id="bsplitlogo" /> -->
-                            </div>
+                            <p class="currently-item"><span class="bold"><a href="https://gov2me.com">gov2me</a></span> —
+                                local legislation tracker and search</p>
                         </li>
                         <li>
                             <p class="currently-item">Skateboarding and roaming all over SF</p>
@@ -64,6 +57,15 @@
                 <div>
                     <h2>previously...</h2>
                     <ul>
+                        <li>
+                            <div class="two-col-no-wrap">
+                                <p class="currently-item"><span class=""><a
+                                            href="https://bananasplit.app">Banana Split</a></span> — built a receipt splitting
+                                    app with friends
+                                    </p>
+                                <!-- <img src="bsplitlogo.png" width="30px" height="30px" id="bsplitlogo" /> -->
+                            </div>
+                        </li>
                         <li>
                             <p class="currently-item">Cornell University, Class of 2022</p>
                         </li>
