--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="two-col">
             <div id="left-col-intro">
                 <h1>James Buzaid</h1>
-                <p class="intro-text">Software Engineer. Transit and climate tech enthusiast. Building sustainable,
+                <p class="intro-text">Software Engineer. Building sustainable,
                     engaged, and safer cities.</p>
                 <div id="socials">
                     <p class="social-link"><a href="https://twitter.com/jbuzzy00">Twitter</a></p>
