--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             </div>
 
-            <div>
+            <div id="right-col-image">
                 <figure id="me">
                     <img src="me.jpg" id="me" />
                     <figcaption>Iceland, 2022</figcaption>
