remove two-col-no-wrap thing

--- a/index.html
+++ b/index.html
@@ -58,13 +58,10 @@
                     <h2>previously...</h2>
                     <ul>
                         <li>
-                            <div class="two-col-no-wrap">
-                                <p class="currently-item"><span class=""><a
-                                            href="https://bananasplit.app">Banana Split</a></span> — built a receipt splitting
-                                    app with friends
-                                    </p>
-                                <!-- <img src="bsplitlogo.png" width="30px" height="30px" id="bsplitlogo" /> -->
-                            </div>
+                            <p class="currently-item"><a
+                                        href="https://bananasplit.app">Banana Split</a> — built a receipt splitting
+                                app with friends
+                            </p>
                         </li>
                         <li>
                             <p class="currently-item">Cornell University, Class of 2022</p>
