--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <div class="two-col">
             <div id="left-col-intro">
                 <h1>James Buzaid</h1>
-                <p class="intro-text">Software Engineer. Building sustainable,
-                    engaged, and safer cities.</p>
+                <p class="intro-text">Software Engineer. Building better cities.</p>
                 <div id="socials">
                     <p class="social-link"><a href="https://twitter.com/jbuzzy00">Twitter</a></p>
                     <p class="social-link"><a href="https://github.com/buzaidj">GitHub</a></p>
