--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                     <h2>currently...</h2>
                     <ul>
                         <li>
-                            <p class="currently-item"><span class="bold">Software engineer @ Airtable</span> —
-                                first observability, now product</p>
+                            <p class="currently-item"><span class="bold">Software engineer @ Airtable</span>
                         </li>
                         <li>
                             <p class="currently-item"><span class="bold"><a href="https://gov2me.com">gov2me</a></span> —
