--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <body>
     <script src="./main.js"></script>
     <div class="overlay"></div>
+    <!-- begin include "header.html" -->
+    <div>
+        <p>Hello!</p>
+    </div>
+    <!-- end include "header.html" -->
     <div id="main">
         <div class="two-col">
             <div id="left-col-intro">
@@ -45,7 +50,8 @@
                             <p class="currently-item"><span class="bold">Software engineer @ Airtable</span>
                         </li>
                         <li>
-                            <p class="currently-item"><span class="bold"><a href="https://gov2me.com">gov2me</a></span> —
+                            <p class="currently-item"><span class="bold"><a href="https://gov2me.com">gov2me</a></span>
+                                —
                                 local legislation tracker and search</p>
                         </li>
                         <li>
@@ -57,8 +63,8 @@
                     <h2>previously...</h2>
                     <ul>
                         <li>
-                            <p class="currently-item"><a
-                                        href="https://bananasplit.app">Banana Split</a> — built a receipt splitting
+                            <p class="currently-item"><a href="https://bananasplit.app">Banana Split</a> — built a
+                                receipt splitting
                                 app with friends
                             </p>
                         </li>
