--- a/_old_site/index.html
+++ b/_old_site/index.html
@@ -1,60 +1,66 @@
----
-layout: default
-title: About
----
-
-
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>James Buzaid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600&display=swap');
     </style>
-    <link rel="stylesheet" type="text/css" href="{{ '/assets/style.css' | relative_url }}">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+    <script src="./main.js"></script>
     <div class="overlay"></div>
+    <!-- begin include "header.html" -->
 <div>
 </div>
+<!-- end include "header.html" -->
     <div id="main">
         <div class="two-col">
             <div id="left-col-intro">
-                <div>
-                <h1>James Buzaid's blog</h1>
-                    <div class="socials">
-                        <p class="social-link"><a href="/">Home</a></p>
-                        <p class="social-link"><a href="/blog">Blog</a></p>
-                    </div>
+                <h1>James Buzaid</h1>
+                <p class="intro-text">Software Engineer. Building better cities.</p>
+                <div id="socials">
+                    <p class="social-link"><a href="https://twitter.com/jbuzzy00">Twitter</a></p>
+                    <p class="social-link"><a href="https://github.com/buzaidj">GitHub</a></p>
+                    <p class="social-link"><a href="resume.pdf">Resume</a></p>
+                    <p class="social-link"><a href="mailto:james.buzaid@gmail.com">james.buzaid@gmail.com</a></p>
                 </div>
+
+            </div>
+
+            <div id="right-col-image">
+                <figure id="me">
+                    <img src="me.jpg" id="me" />
+                    <figcaption>Iceland, 2022</figcaption>
+                </figure>
             </div>
         </div>
+
         <hr>
         <div class="two-col">
             <div>
-                <p class="intro-text">I work at Airtable building software, mostly focused on increasing scale and improving backend performance. Before that, I was a student at Cornell. Outside of work, I'm working on personal projects, skateboarding, and reading.</p>
-                <div class="socials">
-                    <p class="social-link"><a href="https://github.com/buzaidj">GitHub</a></p>
-                    <p class="social-link"><a href="mailto:james.buzaid@gmail.com">james.buzaid@gmail.com</a></p>
-                </div>
-                <div style="margin-top: 3em;">
+                <div>
                     <h2>currently...</h2>
                     <ul>
                         <li>
                             <p class="currently-item"><span class="bold">Software engineer @ Airtable</span>
                         </li>
-                    </ul>
-                </div>
-                <div style="margin-top: 1em;">
-                    <h2>previously...</h2>
-                    <ul>
                         <li>
                             <p class="currently-item"><span class="bold"><a href="https://gov2me.com">gov2me</a></span>
                                 —
                                 local legislation tracker and search</p>
                         </li>
+                        <li>
+                            <p class="currently-item">Skateboarding and roaming all over SF</p>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>previously...</h2>
+                    <ul>
                         <li>
                             <p class="currently-item"><a href="https://bananasplit.app">Banana Split</a> — built a
                                 receipt splitting
@@ -72,13 +78,17 @@ title: About
                         </li>
                     </ul>
                 </div>
+
+
             </div>
-            <div id="right-col-image">
-                <figure id="me">
-                    <img src="{{ '/assets/flip.jpg' | relative_url }}" id="me" width="150" aria-label="Me" />
-                    <figcaption>San Francisco, 2024</figcaption>
-                </figure>
+            <div id="browsing">
+                <p class="browsing-header-p">What I'm reading</p>
+                <div id="browsing-box" class="browsing-box">
+                    <!-- to be filled by main.js -->
+                </div>
             </div>
         </div>
+
 </body>
+
 </html>
