remove blog post that's not finished + update home page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ title: About
         <hr>
         <div class="two-col">
             <div>
-                <p class="intro-text">I work at Airtable building software, mostly focused on increasing scale and improving backend performance. Before that, I was a student at Cornell. Outside of work, I'm working on personal projects, skateboarding, and reading.</p>
+                <p class="intro-text">I work at Airtable building software, mostly focused on increasing scale and improving backend performance. Before that, I was a student at Cornell.</p>
                 <div class="socials">
                     <p class="social-link"><a href="https://github.com/buzaidj">GitHub</a></p>
                     <p class="social-link"><a href="mailto:james.buzaid@gmail.com">james.buzaid@gmail.com</a></p>
@@ -72,12 +72,12 @@ title: About
                     </ul>
                 </div>
             </div>
-            <div id="right-col-image">
+            <!-- <div id="right-col-image">
                 <figure id="me">
                     <img src="{{ '/assets/flip.jpg' | relative_url }}" id="me" width="150" aria-label="Me" />
                     <figcaption>San Francisco, 2024</figcaption>
                 </figure>
-            </div>
+            </div> -->
         </div>
 </body>
 </html>
